syntax = "proto3";

option go_package = "../contexts";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/multiversx/mx-chain-vm-go/vmhost/asyncCall.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package contexts;

enum SerializableCallType {
    DirectCall = 0;
    AsynchronousCall = 1;
    AsynchronousCallBack = 2;
    ESDTTransferAndExecute = 3;
}

message SerializableVMOutput {
    repeated bytes          ReturnData = 1;
    uint64                  ReturnCode = 2;
    string                  ReturnMessage = 3;
    uint64                  GasRemaining = 4;
    bytes                   GasRefund = 5 [(gogoproto.jsontag) = "Value", (gogoproto.casttypewith) = "math/big.Int;github.com/multiversx/mx-chain-core-go/data.BigIntCaster"];
    map<string, SerializableOutputAccount> OutputAccounts = 6;
    repeated bytes          DeletedAccounts = 7;
    repeated bytes          TouchedAccounts = 8;
    SerializableLogEntry    Logs = 9;
}

message SerializableOutputTransfer {
    bytes                   Value = 1 [(gogoproto.jsontag) = "Value", (gogoproto.casttypewith) = "math/big.Int;github.com/multiversx/mx-chain-core-go/data.BigIntCaster"];
    uint64                  GasLimit = 2;
    uint64                  GasLocked = 3;
    bytes                   Data = 4;
    SerializableCallType    CallType = 5;
    bytes                   SenderAddress = 6;
}

message SerializableStorageUpdate {
    bytes   Offset = 1;
    bytes   Data = 2;
    bool    Written = 3;
}

message SerializableOutputAccount {
    bytes   Address = 1;
    uint64  Nonce= 2;
    bytes   Balance = 3 [(gogoproto.jsontag) = "Balance", (gogoproto.casttypewith) = "math/big.Int;github.com/multiversx/mx-chain-core-go/data.BigIntCaster"];
    map<string, SerializableStorageUpdate>  StorageUpdates = 4;
    bytes   Code = 5;
    bytes   CodeMetadata = 6;
    bytes   CodeDeployerAddress = 7;
    bytes   BalanceDelta = 8 [(gogoproto.jsontag) = "BalanceDelta", (gogoproto.casttypewith) = "math/big.Int;github.com/multiversx/mx-chain-core-go/data.BigIntCaster"];
    repeated SerializableOutputTransfer OutputTransfers = 9;
    uint64  GasUsed = 10;
}

message SerializableLogEntry {
    bytes           Identifier = 1;
    bytes           Address = 2;
    repeated bytes  Topics = 3;
    bytes           Data = 4;
}

message SerializableAsyncContext {
    bytes                   Address = 1;
    bytes                   CallID = 2;
    SerializableCallType    CallType = 3;
    bytes                   CallerAddr = 4;
    bytes                   ParentAddr = 5;
    bytes                   CallerCallID = 6;
    bytes                   CallbackAsyncInitiatorCallID = 7;
    string                  Callback = 8;
    bytes                   CallbackData = 9;
    uint64                  GasAccumulated = 10;
    bytes                   ReturnData = 11;
    repeated vmhost.SerializableAsyncCallGroup asyncCallGroups = 12;
    uint64                  CallsCounter = 13;
    uint64                  TotalCallsCounter = 14;
    SerializableVMOutput    ChildResults = 15;
}
